// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appendFormulas TODO constant 1`] = `
Array [
  Object {
    "meta": Object {
      "name": "foo",
      "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
      "richType": Object {
        "meta": Object {},
        "type": "normal",
      },
      "variableId": "1588aedf-06e1-47f1-9282-d2ffe865974c",
    },
    "task": Object {
      "async": false,
      "execEndTime": null,
      "execStartTime": null,
      "uuid": null,
      "variableValue": Object {
        "result": Object {
          "result": 123,
          "type": "number",
        },
        "runtimeEventDependencies": Array [],
        "success": true,
      },
    },
    "variableParseResult": Object {
      "async": false,
      "blockDependencies": Array [],
      "codeFragments": Array [
        Object {
          "attrs": undefined,
          "code": "Equal",
          "display": "=",
          "errors": Array [],
          "meta": undefined,
          "type": "any",
        },
        Object {
          "attrs": undefined,
          "code": "NumberLiteral",
          "display": "123",
          "errors": Array [],
          "type": "number",
        },
      ],
      "cst": Object {
        "children": Object {
          "expression": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "lhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "lhs": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "lhs": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "lhs": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "lhs": Array [
                                                                                    Object {
                                                                                      "children": Object {
                                                                                        "simpleAtomicExpression": Array [
                                                                                          Object {
                                                                                            "children": Object {
                                                                                              "constantExpression": Array [
                                                                                                Object {
                                                                                                  "children": Object {
                                                                                                    "NumberLiteralExpression": Array [
                                                                                                      Object {
                                                                                                        "children": Object {
                                                                                                          "NumberLiteral": Array [
                                                                                                            Object {
                                                                                                              "endColumn": 3,
                                                                                                              "endLine": 1,
                                                                                                              "endOffset": 2,
                                                                                                              "image": "123",
                                                                                                              "startColumn": 1,
                                                                                                              "startLine": 1,
                                                                                                              "startOffset": 0,
                                                                                                              "tokenType": Object {
                                                                                                                "CATEGORIES": Array [],
                                                                                                                "PATTERN": /\\[0-9\\]\\+/,
                                                                                                                "categoryMatches": Array [],
                                                                                                                "categoryMatchesMap": Object {},
                                                                                                                "isParent": false,
                                                                                                                "name": "NumberLiteral",
                                                                                                                "tokenTypeIdx": 46,
                                                                                                              },
                                                                                                              "tokenTypeIdx": 46,
                                                                                                            },
                                                                                                          ],
                                                                                                        },
                                                                                                        "name": "NumberLiteralExpression",
                                                                                                      },
                                                                                                    ],
                                                                                                  },
                                                                                                  "name": "constantExpression",
                                                                                                },
                                                                                              ],
                                                                                            },
                                                                                            "name": "simpleAtomicExpression",
                                                                                          },
                                                                                        ],
                                                                                      },
                                                                                      "name": "atomicExpression",
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "chainExpression",
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "rangeExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "notExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "accessExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "multiplicationExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "additionExpression",
                                                },
                                              ],
                                            },
                                            "name": "concatExpression",
                                          },
                                        ],
                                      },
                                      "name": "inExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "combineExpression",
                  },
                ],
              },
              "name": "expression",
            },
          ],
        },
        "name": "startExpression",
      },
      "definition": "=123",
      "effect": false,
      "eventDependencies": Array [],
      "flattenVariableDependencies": Array [],
      "functionDependencies": Array [],
      "kind": "constant",
      "nameDependencies": Array [],
      "persist": false,
      "position": 4,
      "pure": true,
      "valid": true,
      "variableDependencies": Array [],
      "version": 0,
    },
  },
]
`;

exports[`appendFormulas TODO parse error 1`] = `
Array [
  Object {
    "meta": Object {
      "name": "foo",
      "namespaceId": "d986e871-cb85-4bd5-b675-87307f60b882",
      "richType": Object {
        "meta": Object {},
        "type": "normal",
      },
      "variableId": "615d7f74-dc97-4aae-8690-b6cba1072a6a",
    },
    "task": Object {
      "async": false,
      "execEndTime": null,
      "execStartTime": null,
      "uuid": null,
      "variableValue": Object {
        "result": Object {
          "meta": "syntax",
          "result": "errors.parse.missing.expression",
          "type": "Error",
        },
        "success": false,
      },
    },
    "variableParseResult": Object {
      "async": false,
      "blockDependencies": Array [],
      "codeFragments": Array [
        Object {
          "attrs": undefined,
          "code": "Equal",
          "display": "=",
          "errors": Array [],
          "meta": undefined,
          "type": "any",
        },
        Object {
          "attrs": undefined,
          "code": "Space",
          "display": " ",
          "errors": Array [],
          "type": "any",
        },
        Object {
          "attrs": undefined,
          "code": "NumberLiteral",
          "display": "123",
          "errors": Array [],
          "type": "number",
        },
        Object {
          "attrs": undefined,
          "code": "Space",
          "display": " ",
          "errors": Array [],
          "type": "any",
        },
        Object {
          "attrs": undefined,
          "code": "Plus",
          "display": "+",
          "errors": Array [
            Object {
              "message": "errors.parse.missing.expression",
              "type": "syntax",
            },
            Object {
              "message": "Parse error: \\"\\"",
              "type": "parse",
            },
          ],
          "meta": undefined,
          "type": "number",
        },
      ],
      "cst": Object {
        "children": Object {
          "expression": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "lhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "AdditionOperator": Array [
                                                      Object {
                                                        "endColumn": 6,
                                                        "endLine": 1,
                                                        "endOffset": 5,
                                                        "image": "+",
                                                        "startColumn": 6,
                                                        "startLine": 1,
                                                        "startOffset": 5,
                                                        "tokenType": Object {
                                                          "CATEGORIES": Array [
                                                            Object {
                                                              "CATEGORIES": Array [],
                                                              "PATTERN": /NOT_APPLICABLE/,
                                                              "categoryMatches": Array [
                                                                27,
                                                                36,
                                                              ],
                                                              "categoryMatchesMap": Object {
                                                                "27": true,
                                                                "36": true,
                                                              },
                                                              "isParent": true,
                                                              "name": "AdditionOperator",
                                                              "tokenTypeIdx": 5,
                                                            },
                                                          ],
                                                          "PATTERN": /\\\\\\+/,
                                                          "categoryMatches": Array [],
                                                          "categoryMatchesMap": Object {},
                                                          "isParent": false,
                                                          "name": "Plus",
                                                          "tokenTypeIdx": 27,
                                                        },
                                                        "tokenTypeIdx": 27,
                                                      },
                                                    ],
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "lhs": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "lhs": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "lhs": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "lhs": Array [
                                                                                    Object {
                                                                                      "children": Object {
                                                                                        "simpleAtomicExpression": Array [
                                                                                          Object {
                                                                                            "children": Object {
                                                                                              "constantExpression": Array [
                                                                                                Object {
                                                                                                  "children": Object {
                                                                                                    "NumberLiteralExpression": Array [
                                                                                                      Object {
                                                                                                        "children": Object {
                                                                                                          "NumberLiteral": Array [
                                                                                                            Object {
                                                                                                              "endColumn": 4,
                                                                                                              "endLine": 1,
                                                                                                              "endOffset": 3,
                                                                                                              "image": "123",
                                                                                                              "startColumn": 2,
                                                                                                              "startLine": 1,
                                                                                                              "startOffset": 1,
                                                                                                              "tokenType": Object {
                                                                                                                "CATEGORIES": Array [],
                                                                                                                "PATTERN": /\\[0-9\\]\\+/,
                                                                                                                "categoryMatches": Array [],
                                                                                                                "categoryMatchesMap": Object {},
                                                                                                                "isParent": false,
                                                                                                                "name": "NumberLiteral",
                                                                                                                "tokenTypeIdx": 46,
                                                                                                              },
                                                                                                              "tokenTypeIdx": 46,
                                                                                                            },
                                                                                                          ],
                                                                                                        },
                                                                                                        "name": "NumberLiteralExpression",
                                                                                                      },
                                                                                                    ],
                                                                                                  },
                                                                                                  "name": "constantExpression",
                                                                                                },
                                                                                              ],
                                                                                            },
                                                                                            "name": "simpleAtomicExpression",
                                                                                          },
                                                                                        ],
                                                                                      },
                                                                                      "name": "atomicExpression",
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "chainExpression",
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "rangeExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "notExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "accessExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "multiplicationExpression",
                                                      },
                                                    ],
                                                    "rhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "lhs": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "lhs": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "lhs": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "lhs": Array [
                                                                                    Object {
                                                                                      "children": Object {},
                                                                                      "name": "atomicExpression",
                                                                                      "recoveredNode": true,
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "chainExpression",
                                                                                "recoveredNode": true,
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "rangeExpression",
                                                                          "recoveredNode": true,
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "notExpression",
                                                                    "recoveredNode": true,
                                                                  },
                                                                ],
                                                              },
                                                              "name": "accessExpression",
                                                              "recoveredNode": true,
                                                            },
                                                          ],
                                                        },
                                                        "name": "multiplicationExpression",
                                                        "recoveredNode": true,
                                                      },
                                                    ],
                                                  },
                                                  "name": "additionExpression",
                                                  "recoveredNode": true,
                                                },
                                              ],
                                            },
                                            "name": "concatExpression",
                                            "recoveredNode": true,
                                          },
                                        ],
                                      },
                                      "name": "inExpression",
                                      "recoveredNode": true,
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                                "recoveredNode": true,
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                          "recoveredNode": true,
                        },
                      ],
                    },
                    "name": "combineExpression",
                    "recoveredNode": true,
                  },
                ],
              },
              "name": "expression",
              "recoveredNode": true,
            },
          ],
        },
        "name": "startExpression",
        "recoveredNode": true,
      },
      "definition": "= 123 +",
      "effect": false,
      "eventDependencies": Array [],
      "flattenVariableDependencies": Array [],
      "functionDependencies": Array [],
      "kind": "unknown",
      "nameDependencies": Array [],
      "persist": false,
      "position": 7,
      "pure": true,
      "valid": true,
      "variableDependencies": Array [],
      "version": 0,
    },
  },
]
`;
